# personal-agent-naming

./: Cargo.toml  PAN-SPEC.md  README.md  WEBSITE-CONTENT.md  docker-compose.yml
deploy/: Dockerfile
migrations/: 0001_init.sql  0002_handles.sql  0003_pan_v02.sql  0004_operators.sql  0005_last_seen_ip.sql  0006_agent_profile.sql  0007_encryption_key.sql  0008_delegated_provenance.sql
site/: 404.html  agent-setup.html  agent-setup.md  claim.html  comparison.html  developers.html  domains.html  index.html  llms.txt  pair.html  reach.html  site.css  standard.html  trust.html  why-names.html  why.html
src/: api.rs  db.rs  main.rs  mesh.rs  model.rs  registrar.rs  store.rs
ui/: app.js  index.html  style.css
