[package]
name = "agent-catalog"
version = "0.1.0"
edition = "2021"
description = "Agent Catalog — an ARD-compliant, presence-aware catalog of agents. Indexes, verifies, and shows liveness; never hosts."

[dependencies]
# AgentMesh connector — sibling checkout of the AgentMesh repo (same
# convention as the Egg Gateway's dependency on it).
agentmesh = { path = "../AgentMesh/sdk-rust" }

# HTTP server
axum = "0.7"
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.5", features = ["cors", "trace"] }

# Postgres. Runtime queries only (no compile-time DB dependency): the repo
# must build without a database present.
sqlx = { version = "0.9", default-features = false, features = [
    "runtime-tokio",
    "tls-rustls",
    "postgres",
    "json",
    "chrono",
    "uuid",
    "migrate",
    "macros",
] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Misc
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde"] }
log = "0.4"
env_logger = "0.11"
postgresql_embedded = "0.20.2"

[profile.release]
opt-level = "s"
lto = true
strip = true
